# spiral

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  all_parameter_choices.txt  all_params.pkl  all_params_highrate.pkl  all_params_highrate_streaming.pkl  all_params_streaming.pkl  analyze_err.py  exp_lut.json  exp_lut_highrate.json  fdim_lut_highrate.json  generate_all_schemes.py  output_params.py  run_all.py  run_scheme.py  select_params.py  util.py
include/: client.h  common.h  constants.h  core.h  poly.h  spiral.h  testing.h  util.h  values.h
src/: client.cpp  constants.cpp  core.cpp  gentables.cpp  poly.cpp  spiral.cpp  testing.cpp  util.cpp
